# project-1

./: .gitattributes  .gitignore  README.md  build.gradle.kts  gradlew  gradlew.bat  settings.gradle.kts
.github/workflows/: ci.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/openfiles/shizuku/: IUserService.aidl
app/src/main/java/com/openfiles/: MainActivity.kt  OpenFilesApp.kt
app/src/main/java/com/openfiles/appmanager/: AppManagerScreen.kt  AppManagerViewModel.kt
app/src/main/java/com/openfiles/bookmarks/: BookmarksScreen.kt  BookmarksViewModel.kt
app/src/main/java/com/openfiles/cloud/: CloudBrowserScreen.kt  CloudBrowserViewModel.kt  CloudConnectionsScreen.kt  CloudConnectionsViewModel.kt
app/src/main/java/com/openfiles/duplicates/: DuplicatesScreen.kt  DuplicatesViewModel.kt
app/src/main/java/com/openfiles/locked/: LockedFolderScreen.kt  LockedFolderViewModel.kt
app/src/main/res/drawable/: ic_launcher.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: data_extraction_rules.xml  file_paths.xml
core/common/: build.gradle.kts
core/data/: build.gradle.kts
core/data/schemas/com.openfiles.core.data.db.OpenFilesDb/: 4.json
core/ui/: build.gradle.kts
feature/browser/: build.gradle.kts
feature/gallery/: build.gradle.kts
feature/viewer/: build.gradle.kts
gradle/: libs.versions.toml
launchers/: OpenFiles Emulator.bat
native/rust-core/: Cargo.toml
native/rust-core/src/: lib.rs
test-files/: sample.csv  sample.docx  sample.pptx  sample.txt  sample.xlsx
(+61 files in other folders)
