[package]
name = "rustcore"
version = "0.1.0"
edition = "2021"

[lib]
name = "rustcore"
crate-type = ["cdylib", "staticlib"]

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"

[dependencies]
uniffi = { version = "0.28", features = ["cli"] }
blake3 = "1.5"
thiserror = "1"

[profile.release]
lto = true
strip = true
